2011-09-19  Dominic Mazzoni  <dmazzoni@google.com>

        Expose AXObjectCache methods so that WebAccessibilityCache
        can be deleted.
        https://bugs.webkit.org/show_bug.cgi?id=68225

        Reviewed by Dimitri Glazkov.

        This patch exposes the functionality needed from AXObjectCache
        with new methods in WebAccessibilityObject and WebDocument.
        Next, Chromium will be updated to use only these methods and
        not WebAccessibilityCache. Then, WebAccessibilityCache can be
        deleted from WebKit.

        * public/WebAccessibilityObject.h:
        * public/WebDocument.h:
        * src/WebAccessibilityObject.cpp:
        (WebKit::WebAccessibilityObject::enableAccessibility):
        (WebKit::WebAccessibilityObject::accessibilityEnabled):
        (WebKit::WebAccessibilityObject::axID):
        * src/WebDocument.cpp:
        (WebKit::WebDocument::accessibilityObject):
        (WebKit::WebDocument::accessibilityObjectFromID):

2011-09-19  Bill Budge  <bbudge@chromium.org>

        Perform HTTP method and header validation in AssociatedURLLoader for
        requests coming from untrusted code (eg. Native Client in Chrome). Use
        the same code as XMLHttpRequest to reduce code duplication and have
        behavior identical to XHR in Javascript. Add an 'untrustedHTTP' option
        to WebURLLoaderOptions, which AssociatedURLLoader can use to determine
        if it should check the request method and headers.
        https://bugs.webkit.org/show_bug.cgi?id=67655

        Reviewed by Darin Fisher.

        * public/WebURLLoaderOptions.h:
        (WebKit::WebURLLoaderOptions::WebURLLoaderOptions):
        * src/AssociatedURLLoader.cpp:
        (WebKit::AssociatedURLLoader::ClientAdapter::setDelayedError):
        (WebKit::AssociatedURLLoader::loadAsynchronously):
        * tests/AssociatedURLLoaderTest.cpp:
        (WebKit::AssociatedURLLoaderTest::CheckMethodFails):
        (WebKit::AssociatedURLLoaderTest::CheckHeaderFails):