@@ -1,3 +1,13 @@
+2011-09-19  Robert Kroeger  <rjkroege@chromium.org>
+
+        Suppress flakey test on windows in Chromium gesture recognizer
+        https://bugs.webkit.org/show_bug.cgi?id=68408
+
+        Reviewed by Adam Barth.
+
+        * tests/InnerGestureRecognizerTest.cpp:
+        (TEST_F):
+
 2011-09-19  Dominic Mazzoni  <dmazzoni@google.com>
 
         Expose AXObjectCache methods so that WebAccessibilityCache
